eliminacion List.xhtml de todas las vistas no son necesarios

--- a/src/main/webapp/views/ComparativoTiempoDeVidaUtil/index.html
+++ b/src/main/webapp/views/ComparativoTiempoDeVidaUtil/index.html
@@ -7,76 +7,59 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
-
     <ui:define name="content">
         <ui:include src="../common/Print.xhtml"/>
 
         <h:form id="form">
             <p:fieldset legend="Parametros de busqueda." style="width: 70%; margin: auto;">
-
                 <div align="center" style="border: 1px black solid">
-                    <h2 align="center"> Indice/Promedio de Gasto por Reparacion de Equipo por Area dentro de la Institucion</h2>
+                    <h2 align="center">Comparativo de Tiempo de Vida Util Entre los Diferentes Equipos</h2>
                     <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
 
                     <p:panelGrid  columns="2" columnClasses="column">
                         <p:column>
-                            <h:outputLabel for="fechaActual" value="Fecha de Emision : #{gastoReparacionEquipoManagedBean.fecha}"   />
-                        </p:column>            
+                            <h:outputLabel for="fechaActual" value="Fecha de Emision : #{comparativoDeTiempoVidaUtilManagedBean.fecha}"  />
+                        </p:column>
                         <p:column>               
                             <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
                         </p:column>
-                        <p:column>                   
-                            <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_indice_promedio_gasto_area " />
+                        <p:column>
+                            <span>&nbsp;</span>
+                            <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_comparativo_vida_util" />
                         </p:column>
                     </p:panelGrid>
 
                     <p:growl id="msgs" showDetail="true" />
                     <br/> <br/>
 
-                    <h:panelGrid columns="2" >
+                    <h:panelGrid columns="4" cellpadding="5">
 
                         <p:column>
-                            <p:outputLabel value="Area Hospitalaria" for="area" />
-                            <span>&nbsp;</span>
+                            <p:outputLabel value="Equipo 1" for="equipo" />
                         </p:column>
                         <p:column>
-                            <p:selectOneMenu id="area" value="#{gastoReparacionEquipoManagedBean.area}" converter="#{eventoConverter}" effect="fade"  style="width:200px" >
-                                <f:selectItem itemLabel="Seleccione" />
-                                <f:selectItems value="#{gastoReparacionEquipoManagedBean.eventoList}" var="areas" itemLabel="#{areas.unidad}" itemValue="#{areas}" />       
+                            <p:selectOneMenu id="equipo" value="#{comparativoDeTiempoVidaUtilManagedBean.equipox}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                                <f:selectItem itemLabel="Seleccione equipo x" />
+                                <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
                             </p:selectOneMenu>
-                            <span>&nbsp;</span>
-                        </p:column>
-
-                        <p:column>
-                            <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
-                            <span>&nbsp;</span>
                         </p:column>
                         <p:column>
-                            <p:calendar id="fhInicial" value="#{gastoReparacionEquipoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
-                            <span>&nbsp;</span>
+                            <p:outputLabel value="Equipo 2" for="equipodos" />
                         </p:column>
                         <p:column>
-                            <p:outputLabel for="fhFin"  value="Fecha Final:" />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:calendar id="fhFin" value="#{gastoReparacionEquipoManagedBean.date2}"  pattern="dd-MM-yyyy" />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:outputLabel value="Promedio de Gastos :" for="gasto"/>
-                        </p:column>
-                        <p:column>
-                            <p:selectBooleanCheckbox value="#{gastoReparacionEquipoManagedBean.value1}" id="gasto"/>
+                            <p:selectOneMenu id="equipodos" value="#{comparativoDeTiempoVidaUtilManagedBean.equipoy}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                                <f:selectItem itemLabel="Seleccione equipo y" />
+                                <f:selectItems value="#{comparativoDeTiempoVidaUtilManagedBean.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
+                            </p:selectOneMenu>
                         </p:column>
                     </h:panelGrid>
-
                     <br/> <br/>
+
 
                     <h:panelGrid columns="2"  cellpadding="5">
                         <f:facet name="footer">
                             <div class="footer-section">
-                                <p:commandButton value="Aceptar" update="msgs" actionListener="#{gastoReparacionEquipoManagedBean.click}" icon="ui-icon-check"  />                        
+                                <p:commandButton value="Aceptar" update="msgs" actionListener="#{comparativoDeTiempoVidaUtilManagedBean.click}" icon="ui-icon-check"  />                        
                                 <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
 
                                 <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
@@ -85,8 +68,7 @@
                         </f:facet>
                     </h:panelGrid>
                 </div>
-
             </p:fieldset>
         </h:form>
-    </ui:define>
+</ui:define>
 </ui:composition>
