--- a/src/main/webapp/views/ProyeccionTecnicoTiempo/index.xhtml
+++ b/src/main/webapp/views/ProyeccionTecnicoTiempo/index.xhtml
@@ -1,26 +1,87 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:p="http://primefaces.org/ui"
-                template="/WEB-INF/templates/commonLayout.xhtml">
 
-    <ui:define name="title">
-        <h:outputText value="Proyeccion Tecnico Tiempo"/>
-    </ui:define>
+<ui:composition template="/WEB-INF/templates/commonLayout.xhtml"
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
-
-        <ui:include src="List.xhtml"/>
         <ui:include src="../common/Print.xhtml"/>
-<!--        <ui:include src="Create.xhtml"/>
-        <ui:include src="Edit.xhtml"/>
-        <ui:include src="View.xhtml"/>-->
-        <!--               <ui:include src="Edit.xhtml"/>
-                  <ui:include src="Create.xhtml"/>-->
-        <!--<ui:include src="/tipoAlimento/View.xhtml"/>-->
+        <h:form id="form">
+            <p:fieldset legend="Parametros de busqueda." style="width: 70%; margin: auto;">
+                <div align="center" style="border: 1px black solid">
+                    <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
+                    <p:panelGrid  columns="2" columnClasses="column">
+                        <p:column>
+                            <h:outputLabel for="fechaActual" value="Fecha de Emision : #{tasaExitoFalloReparacionesManagedBean.fechaEmision}"  />
+                        </p:column>
+                        <p:column>                                
+                            <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
+                        </p:column>
+                        <p:column>
+                            <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_tasaExito/fallo" />
+                        </p:column>
+                    </p:panelGrid>
 
+                    <h2 align="center">Proyeccion Tecnico Tiempo Requerido Para Solventar Un Inconveniente</h2>
+
+
+
+                    <h:panelGrid  columnClasses="column">
+
+
+                        <p:column>  <!-- tenias mal las fecha asi deben de ser ojo en el for=id-->
+                            <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
+                            <span>&nbsp;</span>
+                        </p:column>
+                        <p:column>
+                            <p:calendar id="fhInicial" value="#{gastoDepreciacionEquipoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
+                            <span>&nbsp;</span>
+                        </p:column>
+                        <p:column>
+                            <p:outputLabel for="fhFin"  value="Fecha Final:" />
+                            <span>&nbsp;</span>
+                        </p:column>
+                        <p:column>
+                            <p:calendar id="fhFin" value="#{gastoDepreciacionEquipoManagedBean.date2}"  pattern="dd-MM-yyyy" />
+                            <span>&nbsp;</span>
+                        </p:column>
+
+                        <h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+                            <p:selectBooleanCheckbox value="" />
+                            <h:outputText value="Reparaciones Finalizadas" />
+
+
+                            <p:selectBooleanCheckbox value=""/>
+                            <h:outputText value="Reparaciones Fallidas" />
+
+
+
+                            <p:selectBooleanCheckbox value=""/>
+                            <h:outputText value="Promedio del tiempo tardado en reparacion" />
+
+
+                        </h:panelGrid>
+
+                    </h:panelGrid>
+
+                    <h:panelGrid columns="2"  cellpadding="5">
+                        <f:facet name="footer">
+                            <div class="footer-section">
+                                <p:commandButton value="Aceptar" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" icon="ui-icon-check"  />                   
+                                <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
+
+                                <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
+                                <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
+                            </div>
+                        </f:facet>
+                    </h:panelGrid>  
+
+                </div>        
+            </p:fieldset> 
+        </h:form>
     </ui:define>
-
 </ui:composition>
