--- a/src/main/webapp/views/ResumenHistorialReparacionTecnicoNoSubcontratados/index.xhtml
+++ b/src/main/webapp/views/ResumenHistorialReparacionTecnicoNoSubcontratados/index.xhtml
@@ -1,26 +1,113 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:p="http://primefaces.org/ui"
-                template="/WEB-INF/templates/commonLayout.xhtml">
 
-    <ui:define name="title">
-        <h:outputText value="Resumen Historial de Repacacion Tecnicos no Sub Contratados"/>
-    </ui:define>
+<ui:composition template="/WEB-INF/templates/commonLayout.xhtml"
+                xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
-
-        <ui:include src="List.xhtml"/>
         <ui:include src="../common/Print.xhtml"/>
-<!--        <ui:include src="Create.xhtml"/>
-        <ui:include src="Edit.xhtml"/>
-        <ui:include src="View.xhtml"/>-->
-        <!--               <ui:include src="Edit.xhtml"/>
-                  <ui:include src="Create.xhtml"/>-->
-        <!--<ui:include src="/tipoAlimento/View.xhtml"/>-->
 
+        <h:form id="form">
+            <p:fieldset legend="Parametros de busqueda." style="width: 70%; margin: auto;">
+
+                <div align="center" style="border: 1px black solid">
+                    <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
+                    <p:panelGrid  columns="2" columnClasses="column">
+                        <p:column>
+                            <h:outputLabel for="fechaActual" value="Fecha de Emision : #{ResumenHistorialReparacionTecnicoNoSubContratado.fechaServer}"  />
+                        </p:column>
+                        <p:column>                                
+                            <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
+                        </p:column>
+                        <p:column>
+                            <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_historial_reparaciones_tecnicos" />
+                        </p:column>
+                    </p:panelGrid>
+
+                    <h2 align="center">Resumen de historiales de reparaciones efectuadas por tecnicos no Subcontratados</h2>
+
+                    <p:panelGrid  columns="2" columnClasses="column">
+                        <p:column >
+                            <h:outputLabel  value="del: #{ResumenHistorialReparacionTecnicoNoSubContratado.fechaInicio}"  />
+                        </p:column>
+                        <p:column>                                
+                            <h:outputLabel value="Al:#{ResumenHistorialReparacionTecnicoNoSubContratado.fechaFinal}" />
+                        </p:column>
+
+                    </p:panelGrid>
+
+
+                    <!--Panel-->
+
+                    <p:dataTable var="car" value="#{dtBasicView.cars}">
+                        <p:column headerText="Placa Dimesa">
+                            <h:outputText value="#{car.id}" />
+                        </p:column>
+
+                        <p:column headerText="Numero de Serie">
+                            <h:outputText value="#{car.year}" />
+                        </p:column>
+
+                        <p:column headerText="Marca Equipo">
+                            <h:outputText value="#{car.brand}" />
+                        </p:column>
+
+                        <p:column headerText="Modelo Equipo">
+                            <h:outputText value="#{car.color}" />
+                        </p:column>
+
+                        <p:column headerText="Nombre Equipo">
+                            <h:outputText value="#{car.color}" />
+                        </p:column>
+
+                        <p:column headerText="Unidad">
+                            <h:outputText value="#{car.color}" />
+                        </p:column>
+
+                        <p:column headerText="Nombre Tecnico">
+                            <h:outputText value="#{car.color}" />
+                        </p:column>
+
+                        <p:column headerText="Tipo reparacion">
+                            <h:outputText value="#{car.color}" />
+                        </p:column>
+
+                        <p:column headerText="Numero Dimesa">
+                            <h:outputText value="#{car.color}" />
+                        </p:column>
+
+                        <p:column headerText="Coste">
+                            <h:outputText value="#{car.color}" />
+                        </p:column>
+
+
+                    </p:dataTable>
+
+                    <p:dataTable var="total" value="#{total.total}">
+                        <p:column headerText="Total">
+                            <h:outputText value="#{car.id}" />
+                        </p:column>
+
+                    </p:dataTable>
+
+                    <h:panelGrid columns="2"  cellpadding="5">
+                        <f:facet name="footer">
+                            <div class="footer-section">
+                                <p:commandButton value="Aceptar" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" icon="ui-icon-check"  />                   
+                                <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
+
+                                <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
+                                <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
+                            </div>
+                        </f:facet>
+                    </h:panelGrid>
+
+                </div>
+            </p:fieldset>
+        </h:form>
     </ui:define>
-
 </ui:composition>
