--- a/src/main/webapp/views/ResumenHistorialReparacionTecnicoNoSubcontratados/index.xhtml
+++ b/src/main/webapp/views/ResumenHistorialReparacionTecnicoNoSubcontratados/index.xhtml
@@ -12,102 +12,145 @@
         <ui:include src="../common/Print.xhtml"/>
 
         <h:form id="form">
-            <p:fieldset legend="Parametros de busqueda." style="width: 70%; margin: auto;">
 
-                <div align="center" style="border: 1px black solid">
-                    <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
-                    <p:panelGrid  columns="2" columnClasses="column">
-                        <p:column>
-                            <h:outputLabel for="fechaActual" value="Fecha de Emision : #{ResumenHistorialReparacionTecnicoNoSubContratado.fechaServer}"  />
-                        </p:column>
-                        <p:column>                                
-                            <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
-                        </p:column>
-                        <p:column>
-                            <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_historial_reparaciones_tecnicos" />
-                        </p:column>
-                    </p:panelGrid>
+            <div align="center" style="border: 1px black solid">
+                <h3 align="center">Historiales de Reparaciones Efectuadas por Tecnicos No Subcontratados</h3>
 
-                    <h2 align="center">Resumen de historiales de reparaciones efectuadas por tecnicos no Subcontratados</h2>
-
-                    <p:panelGrid  columns="2" columnClasses="column">
-                        <p:column >
-                            <h:outputLabel  value="del: #{ResumenHistorialReparacionTecnicoNoSubContratado.fechaInicio}"  />
-                        </p:column>
-                        <p:column>                                
-                            <h:outputLabel value="Al:#{ResumenHistorialReparacionTecnicoNoSubContratado.fechaFinal}" />
-                        </p:column>
-
-                    </p:panelGrid>
+                <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
+                <p:panelGrid  columns="2" columnClasses="column">
+                    <p:column>
+                        <h:outputLabel for="fechaActual" value="Fecha de Emision : #{resumenHistorialReparacionTecnicoNoSubContratado.fecha}"  />
+                    </p:column>
+                    <p:column>                                
+                        <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
+                    </p:column>
+                    <p:column>
+                        <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_historial_reparaciones_tecnicos" />
+                    </p:column>
+                </p:panelGrid>
 
 
-                    <!--Panel-->
-
-                    <p:dataTable var="car" value="#{dtBasicView.cars}">
-                        <p:column headerText="Placa Dimesa">
-                            <h:outputText value="#{car.id}" />
-                        </p:column>
-
-                        <p:column headerText="Numero de Serie">
-                            <h:outputText value="#{car.year}" />
-                        </p:column>
-
-                        <p:column headerText="Marca Equipo">
-                            <h:outputText value="#{car.brand}" />
-                        </p:column>
-
-                        <p:column headerText="Modelo Equipo">
-                            <h:outputText value="#{car.color}" />
-                        </p:column>
-
-                        <p:column headerText="Nombre Equipo">
-                            <h:outputText value="#{car.color}" />
-                        </p:column>
-
-                        <p:column headerText="Unidad">
-                            <h:outputText value="#{car.color}" />
-                        </p:column>
-
-                        <p:column headerText="Nombre Tecnico">
-                            <h:outputText value="#{car.color}" />
-                        </p:column>
-
-                        <p:column headerText="Tipo reparacion">
-                            <h:outputText value="#{car.color}" />
-                        </p:column>
-
-                        <p:column headerText="Numero Dimesa">
-                            <h:outputText value="#{car.color}" />
-                        </p:column>
-
-                        <p:column headerText="Coste">
-                            <h:outputText value="#{car.color}" />
-                        </p:column>
+                <p:growl id="msgs" showDetail="true" />
+                <h:panelGrid columns="2" cellpadding="5">
 
 
-                    </p:dataTable>
+                    <p:column>
+                        <p:outputLabel value="Tipo de Reporte" for="tipo" />
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="tipo" value="#{resumenHistorialReparacionTecnicoNoSubContratado.tiporeporte}" converter="#{eventoConverter}" effect="fade"  style="width:200px" >
+                            <f:selectItem itemLabel="Seleccione Tipo Reporte" />
+                            <f:selectItems value="#{resumenHistorialReparacionTecnicoNoSubContratado.eventodoList}" var="rep" itemLabel="#{rep.servicio}" itemValue="#{rep}" />       
+                        </p:selectOneMenu>
+                    </p:column>   
 
-                    <p:dataTable var="total" value="#{total.total}">
-                        <p:column headerText="Total">
-                            <h:outputText value="#{car.id}" />
-                        </p:column>
+                    <p:column>
+                        <p:outputLabel value="Tecnicos No sub" for="tecnico" />
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="tecnico" value="#{resumenHistorialReparacionTecnicoNoSubContratado.tecnico}" converter="#{empleadoConverter}" effect="fade"  style="width:200px" >
+                            <f:selectItem itemLabel="Seleccione Tecnico" />
+                            <f:selectItems value="#{resumenHistorialReparacionTecnicoNoSubContratado.empleadoList}" var="categorias" itemLabel="#{categorias.nombreEmpleado}" itemValue="#{categorias}" />       
+                        </p:selectOneMenu>
+                    </p:column>   
+                    <p:column>
+                        <p:outputLabel value="Equipo" for="equipox" />
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="equipox" value="#{resumenHistorialReparacionTecnicoNoSubContratado.equipox}" converter="#{equipoConverter}" effect="fade"  style="width:200px" >
+                            <f:selectItem itemLabel="Seleccione equipo x" />
+                            <f:selectItems value="#{resumenHistorialReparacionTecnicoNoSubContratado.equipoList}" var="categorias" itemLabel="#{categorias.nombequipo}" itemValue="#{categorias}" />       
+                        </p:selectOneMenu>
+                    </p:column> 
 
-                    </p:dataTable>
 
-                    <h:panelGrid columns="2"  cellpadding="5">
-                        <f:facet name="footer">
-                            <div class="footer-section">
-                                <p:commandButton value="Aceptar" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" icon="ui-icon-check"  />                   
-                                <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
 
-                                <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
-                                <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
-                            </div>
-                        </f:facet>
-                    </h:panelGrid>
+                    <p:column>
+                        <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:calendar id="fhInicial" value="#{resumenHistorialReparacionTecnicoNoSubContratado.date1}"  pattern="dd-MM-yyyy"  />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel for="fhFin"  value="Fecha Final:" />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:calendar id="fhFin" value="#{resumenHistorialReparacionTecnicoNoSubContratado.date2}"  pattern="dd-MM-yyyy" />
+                        <span>&nbsp;</span>
+                    </p:column>
+                </h:panelGrid>
 
-                </div>
-            </p:fieldset>
+
+                <!--Panel-->
+
+                <p:dataTable var="car" value="#{dtBasicView.cars}">
+                    <p:column headerText="Placa Dimesa">
+                        <h:outputText value="#{car.id}" />
+                    </p:column>
+
+                    <p:column headerText="Numero de Serie">
+                        <h:outputText value="#{car.year}" />
+                    </p:column>
+
+                    <p:column headerText="Marca Equipo">
+                        <h:outputText value="#{car.brand}" />
+                    </p:column>
+
+                    <p:column headerText="Modelo Equipo">
+                        <h:outputText value="#{car.color}" />
+                    </p:column>
+
+                    <p:column headerText="Nombre Equipo">
+                        <h:outputText value="#{car.color}" />
+                    </p:column>
+
+                    <p:column headerText="Unidad">
+                        <h:outputText value="#{car.color}" />
+                    </p:column>
+
+                    <p:column headerText="Nombre Tecnico">
+                        <h:outputText value="#{car.color}" />
+                    </p:column>
+
+                    <p:column headerText="Tipo reparacion">
+                        <h:outputText value="#{car.color}" />
+                    </p:column>
+
+                    <p:column headerText="Numero Dimesa">
+                        <h:outputText value="#{car.color}" />
+                    </p:column>
+
+                    <p:column headerText="Coste">
+                        <h:outputText value="#{car.color}" />
+                    </p:column>
+
+
+                </p:dataTable>
+
+                <p:dataTable var="total" value="#{total.total}">
+                    <p:column headerText="Total">
+                        <h:outputText value="#{car.id}" />
+                    </p:column>
+
+                </p:dataTable>
+
+                <h:panelGrid columns="2"  cellpadding="5">
+                    <f:facet name="footer">
+                        <div class="footer-section">
+                            <p:commandButton value="Aceptar" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" icon="ui-icon-check"  />                   
+                            <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
+
+                            <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
+                            <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
+                        </div>
+                    </f:facet>
+                </h:panelGrid>
+
+            </div>
+
         </h:form>
     </ui:define>
 </ui:composition>
