--- a/src/main/webapp/views/IndiceEncarrilamiento/index.xhtml
+++ b/src/main/webapp/views/IndiceEncarrilamiento/index.xhtml
@@ -7,7 +7,7 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
-    
+
 
     <ui:define name="title">
         <title>Indice de Encarrilamiento.</title>
@@ -16,7 +16,10 @@
         <ui:include src="../common/Print.xhtml"/>
   
 
-    <h:form id="form">
+        <h:form id="form">    <script>          
+       
+      
+</script>
         <p:fieldset legend="Parametros de busqueda." style="width: 70%; margin: auto;">
             <div align="center" style="border: 1px black solid">
                 <h2 align="center">Indice de Encarrilamiento a Mision y Vision Empresarial</h2>
@@ -73,9 +76,7 @@
                 <h:panelGrid columns="2"  cellpadding="5">
                     <f:facet name="footer">
                         <div class="footer-section">
-                            <p:commandButton value="Aceptar" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" icon="ui-icon-check"  />                   
-                            <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
-
+                            <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" update="msgs" actionListener="#{indiceDeEncarrilamientoManagedBean.click}"  oncomplete="print(xhr, status, args)" />                   
                             <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
                             <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
                         </div>
