reporte indice nuevo

--- a/src/main/webapp/views/IndiceEncarrilamiento/index.xhtml
+++ b/src/main/webapp/views/IndiceEncarrilamiento/index.xhtml
@@ -65,7 +65,7 @@
                     </p:column>
                     <p:column>
                         <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value3}" />
-                        <h:outputText value="Incluir Tiempo de Reparacion Total " />
+                        <h:outputText value="Incluir Fecha de Reparacion " />
                     </p:column>
                     <p:column>
                         <p:selectBooleanCheckbox value="#{indiceDeEncarrilamientoManagedBean.value4}" />
