mas reportes funcionales

--- a/src/main/webapp/views/IndicePromedioGastoPorReparacion/index.xhtml
+++ b/src/main/webapp/views/IndicePromedioGastoPorReparacion/index.xhtml
@@ -76,9 +76,7 @@
                 <h:panelGrid columns="2"  cellpadding="5">
                     <f:facet name="footer">
                         <div class="footer-section">
-                            <p:commandButton value="Aceptar" update="msgs" actionListener="#{gastoReparacionEquipoManagedBean.click}" icon="ui-icon-check"  />                        
-                            <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
-
+                            <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" update="msgs" actionListener="#{gastoReparacionEquipoManagedBean.click}"  oncomplete="print(xhr, status, args)" />                   
                             <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
                             <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
                         </div>
