--- a/src/main/webapp/WEB-INF/reports/compgastosrep/xml/rpt_comparativo_gasto_reparaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/compgastosrep/xml/rpt_comparativo_gasto_reparaciones.jrxml
@@ -2,10 +2,12 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rpt_comparativo_gasto_reparaciones" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="fc7f0ae6-31d2-4e1f-8e99-e683960c923b">
 	<property name="ireport.zoom" value="1.7715610000000017"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="85"/>
+	<property name="ireport.y" value="89"/>
 	<parameter name="fechaInicial" class="java.lang.String"/>
 	<parameter name="fechaFinal" class="java.lang.String"/>
 	<parameter name="usuario" class="java.lang.String"/>
+	<parameter name="equipox" class="java.lang.String"/>
+	<parameter name="equipoy" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -21,91 +23,100 @@
 	<field name="tipoReparacion" class="java.lang.String">
 		<fieldDescription><![CDATA[tipoReparacion]]></fieldDescription>
 	</field>
+	<variable name="sumax" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{equipox}]]></variableExpression>
+		<initialValueExpression><![CDATA[$F{equipox}]]></initialValueExpression>
+	</variable>
+	<variable name="sumay" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{equipoy}]]></variableExpression>
+		<initialValueExpression><![CDATA[$F{equipoy}]]></initialValueExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="196" splitType="Stretch">
+		<band height="211" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="16" width="94" height="20" uuid="830efe96-bd22-48bf-bea6-004c393a69dd"/>
+				<reportElement uuid="830efe96-bd22-48bf-bea6-004c393a69dd" x="0" y="16" width="94" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Emision:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="70" width="572" height="37" uuid="3699cc50-46ba-4f73-80a4-72e78e5dc955"/>
+				<reportElement uuid="3699cc50-46ba-4f73-80a4-72e78e5dc955" x="0" y="70" width="572" height="37"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="16" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DIMESA S.A DE C.V]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="424" y="16" width="80" height="20" uuid="43f8b03f-8d49-4931-a404-f491a590bea8"/>
+				<reportElement uuid="43f8b03f-8d49-4931-a404-f491a590bea8" x="424" y="16" width="80" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="504" y="16" width="40" height="20" uuid="9d8b383d-8db3-49cc-8605-3a4ff1ccdb62"/>
+				<reportElement uuid="9d8b383d-8db3-49cc-8605-3a4ff1ccdb62" x="504" y="16" width="40" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="40" width="94" height="20" uuid="d6b527be-2155-411e-9eaf-ce817f83a791"/>
+				<reportElement uuid="d6b527be-2155-411e-9eaf-ce817f83a791" x="0" y="40" width="94" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Reporte:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="100" y="40" width="472" height="20" uuid="8631dff8-8522-429e-89f3-adb2cde24100"/>
+				<reportElement uuid="8631dff8-8522-429e-89f3-adb2cde24100" x="100" y="40" width="472" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[rpt_comparativo_gasto_reparaciones]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="107" width="572" height="37" uuid="e2053a26-b992-4b83-bd73-c91e7da093e7"/>
+				<reportElement uuid="e2053a26-b992-4b83-bd73-c91e7da093e7" x="0" y="107" width="572" height="37"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Comparativo de Gastos en Reparación]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="410" y="144" width="48" height="20" uuid="e022c376-f28f-4bec-a188-61e2e79b7713"/>
+				<reportElement uuid="e022c376-f28f-4bec-a188-61e2e79b7713" x="376" y="144" width="96" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="154" y="164" width="24" height="20" uuid="bbc3df69-e88f-4764-93bc-83e5d0289395"/>
+				<reportElement uuid="bbc3df69-e88f-4764-93bc-83e5d0289395" x="172" y="164" width="24" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Del:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="278" y="164" width="24" height="20" uuid="c78bbaf0-ea4b-40e0-a1f9-9a9f400c4c9f"/>
+				<reportElement uuid="c78bbaf0-ea4b-40e0-a1f9-9a9f400c4c9f" x="296" y="164" width="24" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Al:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="100" y="16" width="100" height="20" uuid="e72d335b-daa7-416f-9d2f-f0353cdb28f9"/>
+				<reportElement uuid="e72d335b-daa7-416f-9d2f-f0353cdb28f9" x="100" y="16" width="100" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="458" y="144" width="100" height="20" uuid="ad70ebdd-e081-4918-a01c-94f7b19055c1"/>
+				<reportElement uuid="ad70ebdd-e081-4918-a01c-94f7b19055c1" stretchType="RelativeToBandHeight" x="424" y="144" width="148" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{usuario}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="178" y="164" width="100" height="20" uuid="aa9b98d2-8beb-4958-a0d8-f04447fca2f0"/>
+				<reportElement uuid="aa9b98d2-8beb-4958-a0d8-f04447fca2f0" stretchType="RelativeToBandHeight" x="196" y="164" width="100" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{fechaInicial}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="302" y="164" width="100" height="20" uuid="81f686f8-ca7e-4071-88bc-70cfbc7300fc"/>
+				<reportElement uuid="81f686f8-ca7e-4071-88bc-70cfbc7300fc" stretchType="RelativeToBandHeight" x="320" y="164" width="100" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{fechaFinal}]]></textFieldExpression>
 			</textField>
@@ -113,8 +124,8 @@
 	</title>
 	<columnHeader>
 		<band height="20" splitType="Stretch">
-			<staticText>
-				<reportElement x="172" y="0" width="200" height="20" uuid="d056a99c-2e40-4852-a1f0-ed32abf65095"/>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="77511fb9-8983-4853-8975-a4ad014b29a0" stretchType="RelativeToBandHeight" x="172" y="0" width="200" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -122,13 +133,13 @@
 					<bottomPen lineWidth="0.5"/>
 					<rightPen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[ EQUIPO X]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="372" y="0" width="200" height="20" uuid="7fb1fd5c-6739-4eed-82bd-4e4a301d2f9c"/>
+				<textFieldExpression><![CDATA[$P{equipox}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="d4f42b21-d79a-46e2-8f06-753bbfb91072" stretchType="RelativeToBandHeight" x="372" y="0" width="200" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -136,13 +147,13 @@
 					<bottomPen lineWidth="0.5"/>
 					<rightPen lineWidth="0.5"/>
 				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[ EQUIPO Y]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$P{equipoy}]]></textFieldExpression>
+			</textField>
 			<staticText>
-				<reportElement x="0" y="0" width="172" height="20" uuid="c301516f-700f-4b13-818f-2a64fdb17179"/>
+				<reportElement uuid="c301516f-700f-4b13-818f-2a64fdb17179" stretchType="RelativeToBandHeight" x="0" y="0" width="172" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -160,7 +171,7 @@
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="0" y="0" width="172" height="20" uuid="11ff7edc-5726-45e8-8823-d0bfb10f690f"/>
+				<reportElement uuid="11ff7edc-5726-45e8-8823-d0bfb10f690f" stretchType="RelativeToBandHeight" x="0" y="0" width="172" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -172,7 +183,7 @@
 				<textFieldExpression><![CDATA[$F{tipoReparacion}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="172" y="0" width="200" height="20" uuid="cdcc877c-fc2c-4a48-91fc-8710a618535e"/>
+				<reportElement uuid="cdcc877c-fc2c-4a48-91fc-8710a618535e" stretchType="RelativeToBandHeight" x="172" y="0" width="200" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -184,7 +195,7 @@
 				<textFieldExpression><![CDATA[$F{equipox}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="372" y="0" width="200" height="20" uuid="5aa27dc5-3c9b-4d62-b815-4e10282ca00c"/>
+				<reportElement uuid="5aa27dc5-3c9b-4d62-b815-4e10282ca00c" stretchType="RelativeToBandHeight" x="372" y="0" width="200" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -195,15 +206,22 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{equipoy}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement uuid="9cb65752-6513-45f4-b96d-7200e6b1ac34" x="172" y="0" width="10" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[$]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="28081ab8-81a0-43a5-bb81-6e1747e63098" x="372" y="0" width="10" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[$]]></text>
+			</staticText>
 		</band>
 	</detail>
-	<pageFooter>
-		<band height="2" splitType="Stretch"/>
-	</pageFooter>
 	<summary>
 		<band height="42" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="172" height="20" uuid="5f672783-271f-4ade-828a-30e94295aca7"/>
+				<reportElement uuid="5f672783-271f-4ade-828a-30e94295aca7" x="0" y="0" width="172" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -216,8 +234,8 @@
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="172" y="0" width="200" height="20" uuid="b81b3b19-a204-4b1e-8c61-1f55810ccb85"/>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement uuid="05e73908-b21b-4085-bcab-3fd54a51cf8d" x="172" y="0" width="200" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -226,19 +244,29 @@
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[99,999,999.99]]></text>
+				<textFieldExpression><![CDATA[$V{sumax}]]></textFieldExpression>
+			</textField>
+			<textField pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement uuid="e7b69735-68d6-40c1-8f21-81d4ef60fad8" x="372" y="0" width="200" height="20"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{sumay}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement uuid="588f29cc-9d9a-41b1-94e9-13655edadafe" x="172" y="0" width="10" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[$]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="372" y="0" width="200" height="20" uuid="149a57f8-80ae-4969-a68b-7869ffcfeae3"/>
-				<box>
-					<pen lineWidth="0.5"/>
-					<topPen lineWidth="0.5"/>
-					<leftPen lineWidth="0.5"/>
-					<bottomPen lineWidth="0.5"/>
-					<rightPen lineWidth="0.5"/>
-				</box>
+				<reportElement uuid="5bcb959f-c35e-4983-aced-a46972526dd5" x="372" y="0" width="10" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[99,999,999.99]]></text>
+				<text><![CDATA[$]]></text>
 			</staticText>
 		</band>
 	</summary>
