--- a/src/main/webapp/WEB-INF/reports/indicepromediogastodepreciacion/xml/rpt_indice_promedio_gasto_depreciacion_por_area.jrxml
+++ b/src/main/webapp/WEB-INF/reports/indicepromediogastodepreciacion/xml/rpt_indice_promedio_gasto_depreciacion_por_area.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rpt_indice_promedio_gasto_depreciacion_por_area" pageWidth="612" pageHeight="792" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="fc7f0ae6-31d2-4e1f-8e99-e683960c923b">
-	<property name="ireport.zoom" value="1.210000000000003"/>
+	<property name="ireport.zoom" value="1.2100000000000033"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaInicial" class="java.lang.String"/>
@@ -26,48 +26,53 @@
 	<field name="gasto" class="java.lang.Double">
 		<fieldDescription><![CDATA[gasto]]></fieldDescription>
 	</field>
+	<variable name="total" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{gasto}]]></variableExpression>
+		<initialValueExpression><![CDATA[$F{gasto}]]></initialValueExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
 		<band height="251" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="16" width="94" height="20" uuid="830efe96-bd22-48bf-bea6-004c393a69dd"/>
+				<reportElement uuid="830efe96-bd22-48bf-bea6-004c393a69dd" x="0" y="16" width="94" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de Emision:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="70" width="572" height="37" uuid="3699cc50-46ba-4f73-80a4-72e78e5dc955"/>
+				<reportElement uuid="3699cc50-46ba-4f73-80a4-72e78e5dc955" x="0" y="70" width="572" height="37"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="16" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DIMESA S.A DE C.V]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="424" y="16" width="80" height="20" uuid="43f8b03f-8d49-4931-a404-f491a590bea8"/>
+				<reportElement uuid="43f8b03f-8d49-4931-a404-f491a590bea8" x="424" y="16" width="80" height="20"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="504" y="16" width="40" height="20" uuid="9d8b383d-8db3-49cc-8605-3a4ff1ccdb62"/>
+				<reportElement uuid="9d8b383d-8db3-49cc-8605-3a4ff1ccdb62" x="504" y="16" width="40" height="20"/>
+				<textElement/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="40" width="94" height="20" uuid="d6b527be-2155-411e-9eaf-ce817f83a791"/>
+				<reportElement uuid="d6b527be-2155-411e-9eaf-ce817f83a791" x="0" y="40" width="94" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nombre Reporte:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="100" y="40" width="472" height="20" uuid="8631dff8-8522-429e-89f3-adb2cde24100"/>
+				<reportElement uuid="8631dff8-8522-429e-89f3-adb2cde24100" x="100" y="40" width="472" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[rpt_indice_promedio_gasto_depreciacion_por_area]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="107" width="572" height="37" uuid="e2053a26-b992-4b83-bd73-c91e7da093e7"/>
+				<reportElement uuid="e2053a26-b992-4b83-bd73-c91e7da093e7" x="0" y="107" width="572" height="37"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
@@ -75,28 +80,35 @@
  Equipo por Area Dentro de la Institución]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="423" y="152" width="48" height="20" uuid="e022c376-f28f-4bec-a188-61e2e79b7713"/>
+				<reportElement uuid="e022c376-f28f-4bec-a188-61e2e79b7713" x="423" y="152" width="48" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Usuario:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="168" y="176" width="24" height="20" uuid="bbc3df69-e88f-4764-93bc-83e5d0289395"/>
+				<reportElement uuid="bbc3df69-e88f-4764-93bc-83e5d0289395" x="168" y="176" width="24" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Del:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="292" y="176" width="24" height="20" uuid="c78bbaf0-ea4b-40e0-a1f9-9a9f400c4c9f"/>
+				<reportElement uuid="c78bbaf0-ea4b-40e0-a1f9-9a9f400c4c9f" x="292" y="176" width="24" height="20"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Al:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="75" y="209" width="94" height="30" uuid="8bbc1d4f-f8d5-4d19-99da-2d971e70b77e"/>
+				<reportElement uuid="8bbc1d4f-f8d5-4d19-99da-2d971e70b77e" x="75" y="209" width="94" height="30"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
@@ -104,7 +116,14 @@
 por Depreciacion:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="311" y="209" width="94" height="30" uuid="09d939b7-30e9-4447-a965-14574fb79e07"/>
+				<reportElement uuid="09d939b7-30e9-4447-a965-14574fb79e07" x="311" y="209" width="94" height="30"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
@@ -112,41 +131,60 @@ por Depreciacion:]]></text>
 por Depreciacion:]]></text>
 			</staticText>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="316" y="176" width="100" height="20" uuid="1b64cd14-7a49-40a0-96e9-25b32ebf0344"/>
+				<reportElement uuid="1b64cd14-7a49-40a0-96e9-25b32ebf0344" stretchType="RelativeToBandHeight" x="316" y="176" width="100" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{fechaFinal}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="192" y="176" width="100" height="20" uuid="14d0d0d8-8a09-40b1-a931-d72bfbcc1322"/>
+				<reportElement uuid="14d0d0d8-8a09-40b1-a931-d72bfbcc1322" stretchType="RelativeToBandHeight" x="192" y="176" width="100" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{fechaInicial}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement x="171" y="209" width="86" height="30" uuid="c9e02d5e-7fef-4208-b425-9ad461e5143c"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$P{indice}]]></textFieldExpression>
-			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="471" y="152" width="100" height="20" uuid="eb16ace7-97b4-4ddc-ab7d-65ad3d414351"/>
+				<reportElement uuid="eb16ace7-97b4-4ddc-ab7d-65ad3d414351" stretchType="RelativeToBandHeight" x="471" y="152" width="100" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{usuario}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement x="405" y="209" width="88" height="30" uuid="43613c07-f001-49b6-859b-63fa5fb0b63b"/>
+				<reportElement uuid="43613c07-f001-49b6-859b-63fa5fb0b63b" x="405" y="209" width="88" height="30"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{gastoprom}]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="100" y="16" width="100" height="20" uuid="564092a3-2d72-4b4c-b9c3-fc76717c691a"/>
+				<reportElement uuid="564092a3-2d72-4b4c-b9c3-fc76717c691a" x="100" y="16" width="100" height="20"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement uuid="317893e9-191f-4b8c-b14f-94f4d077dc9e" x="405" y="209" width="8" height="30"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[$]]></text>
+			</staticText>
+			<textField isStretchWithOverflow="true" pattern="#,##0.00 %" isBlankWhenNull="true">
+				<reportElement uuid="c0c69379-51c6-483c-bcf2-486b801abd7a" x="168" y="209" width="86" height="30"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$P{indice}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="30" splitType="Stretch">
 			<staticText>
-				<reportElement x="371" y="0" width="100" height="30" uuid="d056a99c-2e40-4852-a1f0-ed32abf65095"/>
+				<reportElement uuid="d056a99c-2e40-4852-a1f0-ed32abf65095" x="371" y="0" width="100" height="30"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -160,7 +198,7 @@ por Depreciacion:]]></text>
 				<text><![CDATA[Fecha de Depreciacion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="472" y="0" width="100" height="30" uuid="7fb1fd5c-6739-4eed-82bd-4e4a301d2f9c"/>
+				<reportElement uuid="7fb1fd5c-6739-4eed-82bd-4e4a301d2f9c" x="472" y="0" width="100" height="30"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -174,7 +212,7 @@ por Depreciacion:]]></text>
 				<text><![CDATA[Gastos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="171" y="0" width="200" height="30" uuid="c301516f-700f-4b13-818f-2a64fdb17179"/>
+				<reportElement uuid="c301516f-700f-4b13-818f-2a64fdb17179" x="171" y="0" width="200" height="30"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -188,7 +226,7 @@ por Depreciacion:]]></text>
 				<text><![CDATA[Equipo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="0" width="171" height="30" uuid="97d01afe-b96d-44ec-a881-79ae30cae221"/>
+				<reportElement uuid="97d01afe-b96d-44ec-a881-79ae30cae221" x="0" y="0" width="171" height="30"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -207,53 +245,58 @@ Hospitalaria]]></text>
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="472" y="0" width="100" height="20" uuid="768dd298-4ddb-46f2-9cc7-a992cbda2efb"/>
+				<reportElement uuid="768dd298-4ddb-46f2-9cc7-a992cbda2efb" stretchType="RelativeToBandHeight" x="472" y="0" width="100" height="20"/>
 				<box>
-					<pen lineWidth="0.25"/>
-					<topPen lineWidth="0.25"/>
-					<leftPen lineWidth="0.25"/>
-					<bottomPen lineWidth="0.25"/>
-					<rightPen lineWidth="0.25"/>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{gasto}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="171" y="0" width="200" height="20" uuid="aea87b59-181b-45e9-b962-7c49547fe885"/>
+				<reportElement uuid="aea87b59-181b-45e9-b962-7c49547fe885" stretchType="RelativeToBandHeight" x="171" y="0" width="200" height="20"/>
 				<box>
-					<pen lineWidth="0.25"/>
-					<topPen lineWidth="0.25"/>
-					<leftPen lineWidth="0.25"/>
-					<bottomPen lineWidth="0.25"/>
-					<rightPen lineWidth="0.25"/>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{equipo}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="371" y="0" width="101" height="20" uuid="aa991291-25c1-4bdd-aec7-0ba8d15e6414"/>
+				<reportElement uuid="aa991291-25c1-4bdd-aec7-0ba8d15e6414" stretchType="RelativeToBandHeight" x="371" y="0" width="101" height="20"/>
 				<box>
-					<pen lineWidth="0.25"/>
-					<topPen lineWidth="0.25"/>
-					<leftPen lineWidth="0.25"/>
-					<bottomPen lineWidth="0.25"/>
-					<rightPen lineWidth="0.25"/>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{fechaRep}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-				<reportElement stretchType="RelativeToBandHeight" x="0" y="0" width="171" height="20" uuid="3c4dda0f-dfd2-46dd-ab17-d9e368f5a372"/>
+				<reportElement uuid="3c4dda0f-dfd2-46dd-ab17-d9e368f5a372" stretchType="RelativeToBandHeight" x="0" y="0" width="171" height="20"/>
 				<box>
-					<pen lineWidth="0.25"/>
-					<topPen lineWidth="0.25"/>
-					<leftPen lineWidth="0.25"/>
-					<bottomPen lineWidth="0.25"/>
-					<rightPen lineWidth="0.25"/>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{area}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement uuid="279379c6-0693-4c3b-b507-1f3ecf0a4efd" x="472" y="0" width="8" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[$]]></text>
+			</staticText>
 		</band>
 	</detail>
 	<pageFooter>
@@ -262,7 +305,7 @@ Hospitalaria]]></text>
 	<summary>
 		<band height="42" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="471" height="20" uuid="5f672783-271f-4ade-828a-30e94295aca7"/>
+				<reportElement uuid="5f672783-271f-4ade-828a-30e94295aca7" x="0" y="0" width="471" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -275,8 +318,8 @@ Hospitalaria]]></text>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="472" y="0" width="100" height="20" uuid="b81b3b19-a204-4b1e-8c61-1f55810ccb85"/>
+			<textField isStretchWithOverflow="true" pattern="#,##0.00" isBlankWhenNull="true">
+				<reportElement uuid="2cea6b1d-9bed-4a03-bdb4-e4dcc220a675" x="471" y="0" width="100" height="20"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -285,7 +328,12 @@ Hospitalaria]]></text>
 					<rightPen lineWidth="0.5"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[99,999,999.99]]></text>
+				<textFieldExpression><![CDATA[$V{total}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement uuid="0ba4bba0-473e-47a0-8b21-ee4c2b46a5cf" x="472" y="0" width="8" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<text><![CDATA[$]]></text>
 			</staticText>
 		</band>
 	</summary>
