--- a/src/main/webapp/views/IndicePromedioGastoPorDepreciacion/index.xhtml
+++ b/src/main/webapp/views/IndicePromedioGastoPorDepreciacion/index.xhtml
@@ -13,79 +13,77 @@
 
         <h:form id="form">
             <div align="center" style="border: 1px black solid">
-               
-
-                    <h3 align="center"> Indice/Promedio de gasto por Depreciacion de equipo por Area Dentro de la Institucion</h3>
-                    <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
-
-                    <p:panelGrid  columns="2" columnClasses="column">
-                        <p:column>
-                            <h:outputLabel for="fechaActual" value="Fecha de Emision : #{gastoDepreciacionEquipoManagedBean.fecha}"   />
-                        </p:column>            
-                        <p:column>               
-                            <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
-                        </p:column>
-                        <p:column>                   
-                            <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_indice_promedio_gasto" />
-                        </p:column>
-                    </p:panelGrid>
-
-                    <p:growl id="msgs" showDetail="true" />
-                    <br/> <br/>
-
-                    <h:panelGrid columns="2" cellpadding="5" >
-
-                        <p:column>
-                            <p:outputLabel value="Area Hospitalaria" for="area" />
-                        </p:column>
-                        <p:column>
-                            <p:selectOneMenu id="area" value="#{comparativoDeGastosReparacionManagedBean.area}" converter="#{eventoConverter}" effect="fade"  style="width:200px" >
-                                <f:selectItem itemLabel="Seleccione" />
-                                <f:selectItems value="#{comparativoDeGastosReparacionManagedBean.eventoList}" var="areas" itemLabel="#{areas.unidad}" itemValue="#{areas}" />       
-                            </p:selectOneMenu>
-                        </p:column>
-
-                        <p:column>
-                            <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:calendar id="fhInicial" value="#{gastoDepreciacionEquipoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:outputLabel for="fhFin"  value="Fecha Final:" />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:calendar id="fhFin" value="#{gastoDepreciacionEquipoManagedBean.date2}"  pattern="dd-MM-yyyy" />
-                            <span>&nbsp;</span>
-                        </p:column>
-                        <p:column>
-                            <p:outputLabel value="Promedio de Gastos :" for="gasto"/>
-                        </p:column>
-                        <p:column>
-                            <p:selectBooleanCheckbox value="#{gastoDepreciacionEquipoManagedBean.value1}" id="gasto"/>
-                        </p:column>
-                    </h:panelGrid>
-
-                    <br/> <br/>
 
 
-                    <h:panelGrid columns="2"  cellpadding="5">
-                        <f:facet name="footer">
-                            <div class="footer-section">
-                                <p:commandButton value="Aceptar" update="msgs" actionListener="#{gastoDepreciacionEquipoManagedBean.click}" icon="ui-icon-check"  />                        
-                                <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" actionListener="#{indiceDeEncarrilamientoManagedBean.click}" oncomplete="print(xhr, status, args)"/>                     
+                <h3 align="center"> Indice/Promedio de gasto por Depreciacion de equipo por Area Dentro de la Institucion</h3>
+                <h1 class="title ui-widget-header ui-corner-all" align="center">DIMESA S.A de C.V</h1>
 
-                                <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
-                                <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
-                            </div>
-                        </f:facet>
-                    </h:panelGrid>
+                <p:panelGrid  columns="2" columnClasses="column">
+                    <p:column>
+                        <h:outputLabel for="fechaActual" value="Fecha de Emision : #{gastoDepreciacionEquipoManagedBean.fecha}"   />
+                    </p:column>            
+                    <p:column>               
+                        <h:outputLabel for="user" value="Usuario :#{currentUserSessionBean.form.sessionUser.username}" />
+                    </p:column>
+                    <p:column>                   
+                        <h:outputLabel for="rpt" value="Nombre de Reporte : rpt_indice_promedio_gasto" />
+                    </p:column>
+                </p:panelGrid>
+
+                <p:growl id="msgs" showDetail="true" />
+                <br/> <br/>
+
+                <h:panelGrid columns="2" cellpadding="5" >
+
+                    <p:column>
+                        <p:outputLabel value="Area Hospitalaria" for="area" />
+                    </p:column>
+                    <p:column>
+                        <p:selectOneMenu id="area" value="#{gastoDepreciacionEquipoManagedBean.area}" converter="#{eventoConverter}" effect="fade"  style="width:200px" >
+                            <f:selectItem itemLabel="Seleccione" />
+                            <f:selectItems value="#{gastoDepreciacionEquipoManagedBean.eventoList}" var="areas" itemLabel="#{areas.unidad}" itemValue="#{areas}" />       
+                        </p:selectOneMenu>
+                    </p:column>
+
+                    <p:column>
+                        <p:outputLabel for="fhInicial" value="Fecha Inicial:" />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:calendar id="fhInicial" value="#{gastoDepreciacionEquipoManagedBean.date1}"  pattern="dd-MM-yyyy"  />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel for="fhFin"  value="Fecha Final:" />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:calendar id="fhFin" value="#{gastoDepreciacionEquipoManagedBean.date2}"  pattern="dd-MM-yyyy" />
+                        <span>&nbsp;</span>
+                    </p:column>
+                    <p:column>
+                        <p:outputLabel value="Promedio de Gastos :" for="gasto"/>
+                    </p:column>
+                    <p:column>
+                        <p:selectBooleanCheckbox value="#{gastoDepreciacionEquipoManagedBean.value1}" id="gasto"/>
+                    </p:column>
+                </h:panelGrid>
+
+                <br/> <br/>
+
+
+                <h:panelGrid columns="2"  cellpadding="5">
+                    <f:facet name="footer">
+                        <div class="footer-section">
+                            <p:commandButton id="reportButton" icon="ui-icon-print"  value="#{crudbundle.Print}" update="msgs" actionListener="#{gastoDepreciacionEquipoManagedBean.click}"  oncomplete="print(xhr, status, args)" />                   
+                            <p:commandButton value="Cancelar" update="msgs"  icon="ui-icon-trash"    />
+                            <p:commandButton type="buton" value="Atras"  icon="ui-icon-check"  onclick="window.location.href = '#{facesContext.externalContext.requestContextPath}/views/index.xhtml'" />                      
+                        </div>
+                    </f:facet>
+                </h:panelGrid>
 
             </div>
-          
+
         </h:form>
     </ui:define>
 </ui:composition>
